# example-project

./: .env.dist  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  logging.conf  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  ruff.yml
alembic/: env.py
alembic/versions/: 96c7585d7570_init_revision.py  f4cca8633cf6_study_and_bookings.py
app/: config.py  main.py  middleware.py
app/graphql/: __init__.py  exceptions.py  mixins.py  types.py
app/graphql/mutations/: __init__.py  author.py  book.py  booking.py  study.py
app/graphql/queries/: __init__.py  author.py  book.py  booking.py  study.py
app/graphql/types/: author.py  book.py  booking.py  study.py
app/models/: __init__.py  author.py  base.py  book.py  booking.py  study.py
